Run event futures on virtual threads